Fix debugging when script is included with additional query string